--- a/index.html
+++ b/index.html
@@ -58,7 +58,16 @@
 				<li><a href="#service">QUÉ HACEMOS?</a></li>
 				<li><a href="#Portfolio">CONTACTO</a></li>
 			</ul>
-			<a class="res-nav_click"  ><i class="fa-bars"></i></a>
+			<ul class="mobile flex flex-vertical-align">
+				<li>
+					<a href="#header"><img src="img/logo-blue.png" alt=""></a>
+				</li>
+				<li>
+					<a class="res-nav_click"  ><i class="fa-bars"></i></a>
+				</li>
+			</ul>
+			
+			
 		</div>
 	</nav>
 	<!--main-nav-end-->
