--- a/lang_english/index.html
+++ b/lang_english/index.html
@@ -61,12 +61,14 @@
 					<ul class="flex flex-horizontal-align">
 						<li>
 							<a href="index.html">
-								<img src="img/eeuu_flag.png" alt="" width="22px;">
+								<!--  	<img src="img/eeuu_flag.png" alt="" width="22px;">-->
+								ENG
 							</a>
 						</li>
 						<li>
 							<a href="../">
-								<img src="img/esp_flag.png" alt="" width="22px;">
+								<!--  <img src="img/esp_flag.png" alt="" width="22px;">-->
+								ESP
 							</a>
 						</li>
 					</ul>
