--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!doctype html>
 <html>
 
-<head>
-	<meta charset="utf-8">
+<head><meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+	
 	<meta name="viewport" content="width=device-width, maximum-scale=1">
 
 	<title>GRUPO PAMPAS</title>
@@ -20,6 +20,13 @@
 	
 
 	<script type="text/javascript" src="js/jquery.1.8.3.min.js"></script>
+	<script
+      src="https://code.jquery.com/jquery-3.4.1.min.js"
+      integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+      crossorigin="anonymous"></script>
+      <script>
+        jq13 = jQuery.noConflict(true);
+    </script>
 	<script type="text/javascript" src="js/bootstrap.js"></script>
 	<script type="text/javascript" src="js/jquery-scrolltofixed.js"></script>
 	<script type="text/javascript" src="js/jquery.easing.1.3.js"></script>
